--- a/src/ocean_optics/main_window.ui
+++ b/src/ocean_optics/main_window.ui
@@ -50,6 +50,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QPushButton" name="save_button">
+          <property name="text">
+           <string>Save data</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
